welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: type mismatch;
 found   : Int(100)
 required: Boolean
		if(60<=temp<=100){
                             ^squirrelPlay:9: error: type mismatch;
 found   : Int(902)
 required: Boolean
		if(60<=temp<=902){
                             ^