welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
	if(isSummer==true){
		if(60<=temp<=100){
			return true
		}else{
			return false
		}
	}else{
		if(60<=temp<=902){
			return true
		}else{
			return false
		}
	}
}
